# lucid2-example

./: .gitignore  CHANGELOG.md  README.md  lucid2-example.cabal  package-lock.json  tailwind.config.js
app/: Main.hs
